# phlame

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
examples/: example_pc.ipynb  example_tmd.ipynb  lalanne_morris_josaa_1996.ipynb  moharam_josaa_1995.ipynb
src/phlame/: config.py  core.py  geometry.py  geometry_new.py  simulation.py
